# Calculator

./: .gitignore  CMakeLists.txt  Config.h.in  Main.cpp
Apps/: CMakeLists.txt
Apps/Numerical/: CMakeLists.txt  Main.cpp  Numerical.cpp  Numerical.h  Numerical.ui
Apps/Plotter/: CMakeLists.txt  Figure.cpp  Figure.h  Generator.cpp  Generator.h  Main.cpp
Common/: BuiltinFunc.cpp  Execute.cpp  Shell.cpp
Compiler/: Lexer.cpp  Parser.cpp  Runtime.cpp
Compiler/ASTs/: AST.cpp  AssignAST.cpp  BinOpAST.cpp  CallAST.cpp  CompoundAST.cpp  EnumSetAST.cpp  ExprModAST.cpp  FuncDefAST.cpp  ImportAST.cpp  ModifyAST.cpp  NameAST.cpp  ScopeAST.cpp  SymDefAST.cpp  TupleAST.cpp  UnaryOpAST.cpp
Compiler/ASTs/NumASTs/: FloatAST.cpp  IntAST.cpp  NumAST.cpp
Include/: AST.h  Abs.h  Add.h  And.h  AssignAST.h  BinOpAST.h  BoolSymbol.h  Boolean.h  CallAST.h  Common.h  CompoundAST.h  Config.h  Contains.h  Context.h  Cos.h  DefinedFunction.h  Derivative.h  DescribeSet.h  E.h  EmptySet.h  EnumSet.h  EnumSetAST.h  Equality.h  Error.h  ExprDefFunction.h  ExprFunction.h  ExprMapping.h  ExprModAST.h  ExprOp.h  ExprSymbol.h  ExprUndefFunction.h  Expression.h  False.h  Float.h  FloatAST.h  FuncDefAST.h  Function.h  GreaterThan.h  ImportAST.h  Includes.h  (+58 more)
Objects/: Matrix.cpp  Object.cpp  Tuple.cpp
Objects/Booleans/: Boolean.cpp  Contains.cpp  False.cpp  True.cpp
Objects/Booleans/Logics/: And.cpp  Logic.cpp  Not.cpp  Or.cpp
Objects/Booleans/Relations/: Equality.cpp  GreaterThan.cpp  LessThan.cpp  Relation.cpp  StrictGreaterThan.cpp  StrictLessThan.cpp  Unequality.cpp
Objects/Expressions/: Derivative.cpp  Expression.cpp
Objects/Expressions/ExprOps/: Add.cpp  ExprOp.cpp  Mul.cpp  Opposite.cpp  Pow.cpp  Reciprocal.cpp  Sqrt.cpp
Objects/Expressions/Numbers/: E.cpp  Float.cpp  Infinity.cpp  Integer.cpp  Number.cpp  PI.cpp  Rational.cpp
Objects/Functions/: DefinedFunction.cpp  Function.cpp  Lambda.cpp  Mapping.cpp  SetFunction.cpp
Objects/Functions/DefinedFunctions/: DefinedFunction.cpp  ExprDefFunction.cpp
Objects/Functions/ExprFunctions/: Abs.cpp  ExprFunction.cpp  Lg.cpp  Log.cpp  Sgn.cpp
Objects/Functions/ExprFunctions/Logs/: Lg.cpp  Ln.cpp  Log.cpp
Objects/Functions/ExprFunctions/TrigFunctions/: Cos.cpp  Sin.cpp  Tan.cpp  TrigFunction.cpp
Objects/Functions/Mappings/: ExprMapping.cpp  Mapping.cpp  SetMapping.cpp
Objects/Functions/UndefinedFunctions/: ExprUndefFunction.cpp  SetUndefFunction.cpp  UndefinedFunction.cpp
Objects/Sets/: DescribeSet.cpp  EmptySet.cpp  EnumSet.cpp  IntegerSet.cpp  Interval.cpp  RationalSet.cpp  RealSet.cpp  Set.cpp  UniversalSet.cpp
Objects/Sets/SetOps/: Intersection.cpp  ProductSet.cpp  SetOp.cpp  Union.cpp
Objects/Symbols/: BoolSymbol.cpp  ExprSymbol.cpp  SetSymbol.cpp  Symbol.cpp
Tests/: CMakeLists.txt  TestFloat.cpp  TestInteger.cpp  TestRational.cpp
